Inicio de estratégia para jogo autonomo

--- a/SetepassosPRJ/SetepassosPRJ.csproj
+++ b/SetepassosPRJ/SetepassosPRJ.csproj
@@ -11,6 +11,15 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Update="Views\Jogo\CriarJogoAutonomo.cshtml">
+      <Pack>$(IncludeRazorContentInPack)</Pack>
+    </Content>
+    <Content Update="Views\Jogo\DadosJogoAutonomo.cshtml">
+      <Pack>$(IncludeRazorContentInPack)</Pack>
+    </Content>
+    <Content Update="Views\Jogo\JogoAutonomoIniciado.cshtml">
+      <Pack>$(IncludeRazorContentInPack)</Pack>
+    </Content>
     <Content Update="Views\Jogo\JogoIniciado.cshtml">
       <Pack>$(IncludeRazorContentInPack)</Pack>
     </Content>
