Apagada subclass visto que nao estava a funcionar corretamente. Feito código para testar estratégia do jogo autonomo através de um método na classe jogo.

--- a/SetepassosPRJ/SetepassosPRJ.csproj
+++ b/SetepassosPRJ/SetepassosPRJ.csproj
@@ -20,6 +20,9 @@
     <Content Update="Views\Jogo\JogoAutonomoIniciado.cshtml">
       <Pack>$(IncludeRazorContentInPack)</Pack>
     </Content>
+    <Content Update="Views\Jogo\JogoIniciadoAutonomo.cshtml">
+      <Pack>$(IncludeRazorContentInPack)</Pack>
+    </Content>
     <Content Update="Views\Jogo\JogoIniciado.cshtml">
       <Pack>$(IncludeRazorContentInPack)</Pack>
     </Content>
