Melhorado a view de instruções, adicionadas as regras. Adicionada view de instruções sobre os bónus.

--- a/SetepassosPRJ/SetepassosPRJ.csproj
+++ b/SetepassosPRJ/SetepassosPRJ.csproj
@@ -11,6 +11,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Update="Views\Home\InstrucoesBonus.cshtml">
+      <Pack>$(IncludeRazorContentInPack)</Pack>
+    </Content>
     <Content Update="Views\Jogo\CriarJogoAutonomo.cshtml">
       <Pack>$(IncludeRazorContentInPack)</Pack>
     </Content>
