Criado o roundsummary. Necessário perceber como chamamos as rondas na view

--- a/SetepassosPRJ/SetepassosPRJ.csproj
+++ b/SetepassosPRJ/SetepassosPRJ.csproj
@@ -17,6 +17,9 @@
     <Content Update="Views\Jogo\CriarJogoAutonomo.cshtml">
       <Pack>$(IncludeRazorContentInPack)</Pack>
     </Content>
+    <Content Update="Views\Jogo\DadosJogoAutonomo.cshtml">
+      <Pack>$(IncludeRazorContentInPack)</Pack>
+    </Content>
     <Content Update="Views\Jogo\JogoIniciado.cshtml">
       <Pack>$(IncludeRazorContentInPack)</Pack>
     </Content>
