--- a/SetepassosPRJ/SetepassosPRJ.csproj
+++ b/SetepassosPRJ/SetepassosPRJ.csproj
@@ -20,6 +20,9 @@
     <Content Update="Views\Jogo\DadosJogoAutonomo.cshtml">
       <Pack>$(IncludeRazorContentInPack)</Pack>
     </Content>
+    <Content Update="Views\Jogo\JogoIniciadoautonomo.cshtml">
+      <Pack>$(IncludeRazorContentInPack)</Pack>
+    </Content>
     <Content Update="Views\Jogo\JogoIniciado.cshtml">
       <Pack>$(IncludeRazorContentInPack)</Pack>
     </Content>
